# agda2hs-user-study

./: .gitignore  Makefile  README.md  agda2hs-user-study.agda-lib  agda2hs-user-study.cabal  compile-agda.sh
app/: Main.hs
app/Test/: All.hs  Lookup.hs  Reverse.hs  Set.hs
default/: All.hs  Lookup.hs  Reverse.hs
lib/: Lib.agda  Reverse.agda  Set.agda
lib/Help/: Contains.agda
solution/: All.agda  Lookup.agda  Reverse.agda  Set.agda
