cabal-version:      2.4
name:               agda2hs-user-study
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sára Juhošová
maintainer:         s.juhosova@student.tudelft.nl

-- A copyright notice.
-- copyright:
-- category:

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>=4.16.3.0

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Reverse

executable agda2hsUserStudy
  import: shared-properties
  main-is:          Main.hs

    -- Modules included in this executable, other than Main.
  other-modules:
    Test.Reverse
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   app
  build-depends:
      agda2hs-user-study
    , QuickCheck


